--- a/cacualtor.html
+++ b/cacualtor.html
@@ -5,14 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="./bootstrap-5.3.0-alpha1-dist/bootstrap-5.3.0-alpha1-dist/css/bootstrap.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
         <script src="./iii.js"></script>
     </head>
     <body>
-        <div class=" border border-info">
-            <div class=" border border-danger p-2 " style="width: 450px;">
-                <div></div>
-                <div class="py-3 bg-dark text-light fw-bold fs-3" id="fff">0</div>
+        <div class=" border border-info bg-light container">
+            <div class=" border border-danger p-2 mx-auto col-lg-4 col-sm-12 shadow-lg">
                 <input type="text" class="py-3 fw-bold fs-4 form-control" id="user">
                 <div class="d-flex my-3">
                     <button class="btn btn-info w-25 mx-1 fw-bold fs-3" onclick="mynumber('+')">+</button>
@@ -45,7 +43,7 @@
                         
                     </div>
                     <div class="d-flex w-25 border">
-                        <button class="btn btn-info col m-1 fw-bold px-4 fs-5 mx-2" onclick="myac()">=</button>
+                        <button class="btn btn-info col m-1 fw-bold px-4 fs-5 mx-2" onclick="equalto()">=</button>
                     </div>
 
                 </div>
